# leo

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CITATION.cff  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  index.html  traffic.json
app/offline_sys/: .gitignore  Makefile  pyproject.toml  readme.txt
app/offline_sys/configs/: collect_notion_data.yaml  etl.yaml  gen_data.yaml  rag_index.yaml
app/offline_sys/pipelines/: __init__.py  collect_notion_data.py  etl.py  gen_data.py  rag_index.py
app/offline_sys/src/offline/: config.py  readme.txt  utils.py
app/offline_sys/src/offline/application/agents/: __init__.py  contextual.py  quality.py  summarization.py
app/offline_sys/src/offline/domain/: __init__.py  document.py  instruct_data.py
app/offline_sys/src/offline/infra/aws/: __init__.py  (+1 more)
app/offline_sys/steps/collect_notion_data/: __init__.py  extract_notion_docs.py  extract_notion_docs_metadata.py
app/offline_sys/steps/etl/: __init__.py  add_quality_score.py  crawl.py
app/offline_sys/steps/gen_data/: __init__.py  gen_sum.py  hist.py
app/offline_sys/steps/infra/: __init__.py  fetch_from_mongodb.py  ingest_to_mongodb.py  push_hf.py  read_docs_from_disk.py  save_data_to_disk.py  save_docs_to_disk.py  upload_to_s3.py
app/offline_sys/steps/rag_index/: __init__.py  chunk_embed_load.py  filter_quality.py
app/offline_sys/tools/: del_rag_collection.py  run.py  use_s3.py  validate_aws_credentials.py
app/online_sys/: .dockerignore  .gitignore  Makefile  api.Dockerfile  docker-compose.yml  pyproject.toml
app/online_sys/configs/: rag_index.yaml
app/online_sys/src/online/: config.py  opik_utils.py
app/online_sys/src/online/application/: __init__.py
app/online_sys/tools/: api.py  app.py  eval_api.sh  eval_app.py
app/online_sys/ui/: Dockerfile  index.html  nginx.conf  vite.config.ts
app/online_sys/ui/src/: App.tsx  main.tsx
app/online_sys/ui/src/components/: ActivityTimeline.tsx  ChatMessagesView.tsx  Header.tsx  InputForm.tsx  ThemeToggle.tsx  WelcomeScreen.tsx
app/online_sys/ui/src/lib/: api.ts  theme.tsx
(+41 files in other folders)
