[project]
name = "leo-online"
version = "0.1.0"
authors = [
    {name = "Charles Le", email = "tuanleducanh78202@gmail.com"},
]
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.3",
    "pydantic>=2.8.2",
    "pydantic-settings>=2.7.0",
    "pymongo>=4.10.1",
    "boto3>=1.36.0",
    "langchain>=0.3.14",
    "langchain-mongodb>=0.4.0",
    "langchain-openai>=0.3.1",
    "langchain-core>=0.3.30",
    "smolagents>=1.4.1",
    "opik>=0.1.0",
    "comet_ml>=3.47.6",
    "langchain-huggingface>=0.1.2",
    "langchain-google-genai>=2.1.5",
    "duckduckgo-search>=8.0.2",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "python-dotenv>=1.0.1",
    "pre-commit>=4.2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "ruff>=0.7.2",
]

[tool.pip]
extra-index-url = "https://download.pytorch.org/whl/cpu/torch_stable.html"

[tool.ruff.lint]
ignore = ["F401"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/online"]

[tool.ruff]
target-version = "py312"
